k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: puggan/docker-lab-20250522-auth
          volumeMounts:
            - name: jwt-private-key
              mountPath: /app/jwt-private.key
              subPath: jwt-private.key
              readOnly: true
            - name: users-db
              mountPath: /app/users.db
              subPath: users.db
              readOnly: true
      volumes:
        - name: jwt-private-key
          secret:
            secretName: jwt-private-key
        - name: users-db
          secret:
            secretName: users-db
