k8s/jokebox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jokebox-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: jokebox
  template:
    metadata:
      labels:
        app: jokebox
    spec:
      containers:
        - name: jokebox
          image: puggan/docker-lab-20250522-jokebox
          volumeMounts:
            - name: jokes
              mountPath: /app/jokes
              readOnly: true
      volumes:
        - name: jokes
          hostPath:
            path: jokebox/jokes
            type: Directory
