k8s/quotebox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotebox-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: quotebox
  template:
    metadata:
      labels:
        app: quotebox
    spec:
      containers:
        - name: quotebox
          image: puggan/docker-lab-20250522-quotebox
          volumeMounts:
            - name: quotes
              mountPath: /app/quotes
              readOnly: true
      volumes:
        - name: quotes
          configMap:
            name: quotebox-quotes
