k8s/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
      #nodePort: 8080
  type: NodePort
