k8s/jokebox-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jokebox
spec:
  selector:
    app: jokebox
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
