k8s/quotebox-service.yml

apiVersion: v1
kind: Service
metadata:
  name: quotebox
spec:
  selector:
    app: quotebox
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
